--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "devicon": "^2.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
+    "react-scripts": "1.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
